@@ -1,3 +1,8 @@
+2022-11-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/simpleTest.R: Add simple tests for cat() and fmt()
+	* tests/simpleTest.Rout.save: Reference output
+
 2022-11-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version and date
